# switchboard

./: .gitignore  Cargo.toml  README  messages.fbs
demo/: fast-send-null.py  fast-send-sim.py  recv.py  send.py  view-update-sim.py
demo/switchboard/: Broadcast.py  Content.py  Msg.py  Type.py  ViewUpdate.py
src/: actors.rs  main.rs  rabbit.rs
src/actors/: util.rs
static/: index.html
