[package]
name = "switchboard"
version = "0.1.0"
authors = ["Andrew Newlands <andrew_newlands@hotmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
actix = "0.8.2"
actix-codec = "0.1.2"
actix-web = "1.0.0"
actix-web-actors = "1.0.0"
actix-files = "0.1.1"
awc = "0.2.1"
env_logger = "0.6"
futures = "0.1"
bytes = "0.4"