[package]
name = "switchboard"
version = "0.1.0"
authors = ["Andrew Newlands <andrew_newlands@hotmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
actix = "0.8"
actix-codec = "0.1"
actix-web = "1.0"
actix-web-actors = "1.0"
actix-files = "0.1"
awc = "0.2.1"
env_logger = "0.6"
futures = "0.1"
bytes = "0.4"
log = "^0.4"
serde_json = "1.0"
ctrlc="3.1"
flatbuffers="*"
amiquip = "0.3"
crossbeam-channel = "0.3"
